feature: 기능 추가 (1),(2) / fix: config 수정 (1) 베스트셀러 5 표시 기능 (2) 조회수 표시 기능